--- a/BlogUI/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -18,9 +18,9 @@
 <p>
     Please check your email to confirm your account.
 
-    You may update your avatar image by going to <a href="http://lfost42-blog.herokuapp.com/Identity/Account/Manage">
-    http://lfost42-blog.herokuapp.com/Identity/Account/Manage
-</a> after logging in. 
+    You may update your email, password, avatar image, and delete your account using the <a href="http://lfost42-blog.herokuapp.com/Identity/Account/Manage">
+    <i class="icon brands fa fa-duotone fa-user fa-lg"></i>
+            </a> icon after logging in.
 </p>
     }
 }
