--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -53,6 +53,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="~/Identity/Account/Manage"><i class="icon brands fa fa-duotone fa-user fa-lg"></i></a>
+                                @*<a class="nav-link" asp-page="/Account" asp-area="Identity" asp-action="Manage"><i class="icon brands fa fa-duotone fa-user fa-lg"></i></a>*@
                             </li>
                         </ul>
                     </div>
