--- a/BlogUI/Views/Articles/Index.cshtml
+++ b/BlogUI/Views/Articles/Index.cshtml
@@ -6,6 +6,15 @@
     ViewData["Title"] = "Articles Index";
 }
 
+<meta property="og:title" content="MyBlog" />
+<meta property="og:description" content="A knowledge base for .NET(C#) coding and web development." />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="http://lfost42-blog.herokuapp.com" />
+<meta property="og:image" content="http://lfost42-blog.herokuapp.com/images/app.png" />
+<meta property="og:image:alt" content="Blog Logo" />
+<meta property="og:site_name" content="by Lynda Foster" />
+<meta property="og:locale" content="en_US" />
+
 <h1>Articles Index</h1>
 
 @if (User.IsInRole("Owner"))
