--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -70,20 +70,20 @@
                         <div class="navbar-expand">
                             <ul class="navbar-nav flex-row small author">
                                 <li class="nav-item">
-                                    <a class="nav-link topic" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
+                                    <a class="nav-link topic" asp-controller="Home" asp-action="SeriesIndex">Series</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="1">DATA</a>
+                                    <a class="nav-link" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="1">DATA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">LAYOUTS</a>
+                                    <a class="nav-link" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">LAYOUTS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">PROJECTS</a>
+                                    <a class="nav-link" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">PROJECTS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">TOOLS</a>
+                                    <a class="nav-link" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">TOOLS</a>
                                 </li>
                             </ul>
                         </div>
