--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>@ViewData["Title"] - Blog</title>
+    <title>@ViewData["Title"] - .NET Blog</title>
 
     <meta property="og:image" content="https://lfost42-blog.herokuapp.com/images/app.png" />
-    <meta property="og:image:alt" content="Blog Logo" />
+    <meta property="og:image:alt" content=".NET Blog Logo" />
     <meta name="twitter:card" content="summary_large_image">
 
     <link href="~favicon.ico" rel="shortcut icon icon" type="image/x-icon" />
@@ -33,7 +33,7 @@
                     <div class="col-auto">
                         <div class="row">
                             <div class="col-auto">
-                                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Blog</a>
+                                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">.NET Blog</a>
                             </div>
                             <div class="col">
                                 <partial name="_LoginPartial" />
