--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,10 +7,16 @@
     <title>@ViewData["Title"] - .NET Blog</title>
 
     <meta property="og:image" content="https://lfost42-blog.herokuapp.com/images/app.png" />
-    <meta property="og:image:alt" content=".NET Blog Logo" />
+    <meta property="og:image:alt" content="Blog Logo" />
     <meta name="twitter:card" content="summary_large_image">
 
+    <meta property="og:site_name" content="by Lynda Foster" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
+    <meta name="twitter:creator" content="&#64;lfost42" />
     <link href="~favicon.ico" rel="shortcut icon icon" type="image/x-icon" />
+
+
     <!--bootstrap cdn-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -70,20 +76,20 @@
                         <div class="navbar-expand">
                             <ul class="navbar-nav flex-row small author">
                                 <li class="nav-item">
-                                    <a class="nav-link topic" asp-controller="Home" asp-action="SeriesIndex">Series</a>
+                                    <a class="nav-link topic" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="1">DATA</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="1">DATA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">LAYOUTS</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">LAYOUTS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">PROJECTS</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">PROJECTS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">TOOLS</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">TOOLS</a>
                                 </li>
                             </ul>
                         </div>
