--- a/Blog/Views/Articles/Details.cshtml
+++ b/Blog/Views/Articles/Details.cshtml
@@ -1,8 +1,8 @@
-@using BlogLibrary.Databases.Interfaces
+@using Blog.Data.Databases.Interfaces
 @using Microsoft.AspNetCore.Identity
 
-@using BlogLibrary.Models.Enum
-@using BlogLibrary.Models
+@using Blog.Data.Models.Enum
+@using Blog.Data.Models
 @model ArticleModel
 
 @inject UserManager<UserModel> userManager
