--- a/Blog/Views/Home/Index.cshtml
+++ b/Blog/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@using BlogLibrary.Models
+﻿@using Blog.Data.Models
 @using X.PagedList
 @using X.PagedList.Mvc.Core
 @using X.PagedList.Web.Common
-@using BlogLibrary.Databases.Interfaces
+@using Blog.Data.Databases.Interfaces
 @inject IImageService imageService
 
 @model IPagedList<ArticleModel>
