--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     <div class="col-auto">
                         <div class="row">
                             <div class="col-auto">
-                                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/favicon.png" width="35" height="35" alt="zen icon">.NET Blog</a>
+                                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/brand.png" width="35" height="35" alt="zen icon" style="vertical-align:middle"> .NET Blog</a>
                             </div>
                             <div class="col">
                                 <partial name="_LoginPartial" />
