--- a/Blog/Views/Articles/Edit.cshtml
+++ b/Blog/Views/Articles/Edit.cshtml
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col mt-1">
-                    <select class="button" name="TagValues" id="TagList" multiple></select>
+                    <select class="button h-75" name="TagValues" id="TagList" multiple></select>
                 </div>
             </div>
             </div>
