articles index/create adjustment

--- a/Blog/Views/Articles/Create.cshtml
+++ b/Blog/Views/Articles/Create.cshtml
@@ -62,8 +62,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
-                            <select class="btn-block" name="TagValues" id="TagList" multiple></select>
+                        <div class="col mt-1">
+                            <select class="button h-75" name="TagValues" id="TagList" multiple></select>
                         </div>
                     </div>
                 </div>
