--- a/Blog/Views/Articles/Index.cshtml
+++ b/Blog/Views/Articles/Index.cshtml
@@ -67,7 +67,7 @@
                             <a asp-action="Edit" asp-route-slug="@item.Slug" class="owner">Edit</a>
                             <a asp-action="Delete" asp-route-slug="@item.Slug" class="owner">Delete</a>
                         }
-                        <a asp-action="Details" asp-route-slug="@item.Slug" class="owner">Details</a>
+                        <a asp-action="Details" asp-route-slug="@item.Slug">Details</a>
                     </div>
                 </td>
             </tr>
