--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>@ViewData["Title"] - .NET Blog</title>
+    <title>@ViewData["Title"] - Professional Blog</title>
 
     <meta property="og:image" content="https://lfost42-blog.herokuapp.com/images/app.png" />
     <meta property="og:image:alt" content="Blog Logo" />
@@ -59,7 +59,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="~/Identity/Account/Manage"><i class="icon brands fa fa-duotone fa-user fa-lg"></i></a>
-                                @*<a class="nav-link" asp-page="/Account" asp-area="Identity" asp-action="Manage"><i class="icon brands fa fa-duotone fa-user fa-lg"></i></a>*@
                             </li>
                         </ul>
                     </div>
@@ -83,13 +82,13 @@
                                     <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="1">DATA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">LAYOUTS</a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">PROJECTS</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">TOOLS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="5">CODE</a>
                                 </li>
                             </ul>
                         </div>
