--- a/Blog/Views/Home/SeriesIndex.cshtml
+++ b/Blog/Views/Home/SeriesIndex.cshtml
@@ -12,43 +12,24 @@
 <div class="container">
     <div class="row">
 
-        @foreach (var item in Model.Take(1))
+        @foreach (var item in Model)
         {
-<div class="col-lg-12 mx-auto mb-2">
-    <div class="card p-4 h-100">
-        <a asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="@item.Id">
+        <div class="col-sm-12 col-md-6 col-lg-4 gy-2 mb-2 border-0">
+            <div class="card p-3 h-100">
+                <a asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="@item.Id">
 
-            @if (item.Image != null)
-            {
-<img src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" class="card-img-top" />}
-        </a>
-        <div class="card-body text-start h-100">
-            <h5 class="card-title">@item.Title</h5>
-            <p class="card-text">@item.Description</p>
-        </div>
-    </div>
-</div>}
-
-
-        @foreach (var item in Model.Skip(1))
-        {
-<div class="col-lg-6 col-md-6 mx-auto mb-2 contents-justify-start">
-    <div class="card p-4 h-100">
-        <a asp-controller="Series" asp-action="Details" asp-route-id="@item.Id">
-
-            @if (item.Image != null)
-            {
-<img src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" class="card-img-top" />}
-        </a>
-        <div class="card-body text-start h-100">
-            <h5 class="card-title">@item.Title</h5>
-            <p class="card-text">@item.Description</p>
-        </div>
-    </div>
-</div>}
+                    @if (item.Image != null)
+                    {
+        <img src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" class="card-img-top" />}
+                </a>
+                <div class="card-body text-start h-100">
+                    <h5 class="card-title">@item.Title</h5>
+                    <p class="card-text">@item.Description</p>
+                </div>
+            </div>
+        </div>}
     </div>
 </div>
-
 
 @if (Model.PageCount > 1)
 {
