--- a/Blog/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Blog/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -21,6 +21,9 @@
         <div class="col-md-9">
             @RenderBody()
         </div>
+        <div>
+            <partial name="_LoginPartial" />
+        </div>
     </div>
 </div>
 
