--- a/Blog/Views/Articles/ArticleIndex.cshtml
+++ b/Blog/Views/Articles/ArticleIndex.cshtml
@@ -27,29 +27,7 @@
 
 <div class="container">
     <div class="row">
-
-        @foreach (var item in Model.Take(1))
-        {
-            <div class="col-lg-12 mx-auto mb-2">
-                <div class="card p-4 h-100">
-                    <a asp-controller="Articles" asp-action="Details" asp-route-slug="@item.Slug">
-
-                        @if (item.Image != null)
-                        {
-                            <img src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" class="card-img-top" />
-                        }
-                    </a>
-                    <div class="card-body text-start h-100">
-                        @item.SeriesModel.Title
-                        <h5 class="card-title">@item.Title</h5>
-                        <p class="card-text">@item.Summary</p>
-                    </div>
-                </div>
-            </div>
-        }
-
-
-        @foreach (var item in Model.Skip(1))
+        @foreach (var item in Model)
         {
             <div class="col-lg-6 col-md-6 mx-auto mb-2 contents-justify-start">
                 <div class="card p-4 h-100">
