--- a/Blog/Views/Articles/Edit.cshtml
+++ b/Blog/Views/Articles/Edit.cshtml
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col mt-1">
-                    <select class="button h-75" name="TagValues" id="TagList" multiple></select>
+                    <select class="h-75" name="TagValues" id="TagList" multiple></select>
                 </div>
             </div>
             </div>
@@ -99,7 +99,7 @@
         $('#Body').summernote({
             placeholder: 'Message',
             tabsize: 2,
-            height: 120,
+            height: 200,
             toolbar: [
                 ['style', ['style']],
                 ['font', ['bold', 'underline', 'clear']],
