--- a/Blog/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Blog/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -21,7 +21,7 @@
         <div class="col-md-9">
             @RenderBody()
         </div>
-        <div>
+        <div class="col">
             <partial name="_LoginPartial" />
         </div>
     </div>
